# antigence-beta

./: .gitignore  ANTIGENCE_SIGNATURE_PROTOCOL.md  BENCHMARKS.json  BENCHMARKS.md  BENCHMARKS_CURATED.json  BENCHMARKS_DEVIGN.json  CHANGELOG.md  CITATION.cff  CITATIONS.bib  CONTRIBUTING.md  ESSENTIALS.md  GETTING_STARTED.md  GUARANTEES.md  IR-PLAYBOOK.md  KB_UPDATE_ANTIGENCE_SIGNATURES.md  LAB_NOTEBOOK.md  README.md  SECURITY.md  SOURCE_MAP.md  VERSION  context.json  generate_preprint_report.py  pyproject.toml
blog/: README.md  antigence-tier0-zenodo-substack.md  context.json
cases/: CASE_MATER_ACRONYM_DRIFT.md
config/: DATA_NOTE.md  README.md  antigence_mcp_config.json.example  config.yaml.example  context.json  models.json
docs/: ANTIGENCE_MCP_SETUP.md  ANTIGENCE_STARTUP.md  ANTIGENCE_TOOLS_REFERENCE.md  CITATION_IMMUNITY.md  DATA_SOURCING.md  FRONTIER_AIS_ROADMAP.md  ONE_PAGER.md  README.md  branding.md  context.json  lexicon.md  pitch.md
examples/: DATA_NOTE.md  README.md  README_LLM_DEMO.md  context.json  llm_agents_demo.py  llm_enhanced_agents.py  negsl_replication_mock.py  nk_comparison_demo.py  qml_ainet_validation.py  qml_hardware_benchmark.py  setup_ollama.sh  simple_demo.py  verify_ollama.py
manuscript/: NegSl-AIS_PREPRINT_SUMMARY.md  PREPRINT_v0.1.0_TIER1.md  README.md  context.json  immunos-preprint-tier0-short.md  immunos-preprint-tier0.md  immunos-preprint-tier1-outline.md
scripts/: DATA_NOTE.md  INSTALL_ANTIGENCE_MCP.sh  README.md  antigence_api.py  antigence_cicd.py  auto_train_pipeline.py  benchmark_accuracy.py  benchmark_curated.py  (+34 more)
(+222 files in other folders)
