[project]
name = "antigence"
version = "0.2.0-alpha"
description = "Deterministic guardrails for probabilistic models — bio-inspired Artificial Immune System"
authors = [{name = "BiobitWorks"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
]

[project.scripts]
immunos-mcp-mvp = "immunos_mcp.servers.simple_mcp_server:main"
immunos-orchestrator = "immunos_mcp.orchestrator.orchestrator:main"

[project.optional-dependencies]
mcp = [
    "mcp>=1.3.1",
]
llm = [
    "anthropic>=0.39.0",
    "openai>=1.0.0",
]
vector = [
    "chromadb>=0.5.0",
]
gpu = [
    "torch>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/immunos_mcp"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
